contrast fix

--- a/style.css
+++ b/style.css
@@ -166,7 +166,11 @@ main {
   background-color: var(--clr-accent-orange-red);
   border-radius: 0.75rem;
   padding: 3rem 2.25rem;
+
+  /* Contrast too low with white text */
   color: var(--clr-neutral-100);
+
+  /* color: var(--clr-neutral-200); */
 }
 
 .download__title {
@@ -224,6 +228,7 @@ main {
   background-size: 1rem 1.25rem;
   width: 1rem;
   height: 1.25rem;
+  transition: 300ms;
 }
 
 .download__link--android {
@@ -235,7 +240,15 @@ main {
 
 .download__link:is(:hover, :focus-visible) {
   --bg-color: var(--clr-accent-cyan);
+
+  /* Contrast too low with white text */
+  /* --text-color: var(--clr-neutral-200); */
 }
+
+/* Low contrast fix */
+/* .download__link:is(:hover, :focus-visible)::before {
+  filter: brightness(0);
+} */
 
 .download__link--android:is(:hover, :focus-visible) {
   --bg-color: var(--clr-accent-yellow);
